# CrewAI-Agents

./: README.md  pyproject.toml  report.md
src/financial_reseacher/: crew.py  main.py
src/financial_reseacher/config/: agents.yaml
